translation, rewording and updates for many files here
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104079 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sq/download.lang
+++ b/sq/download.lang
@@ -35,6 +35,4 @@ Mirë se vini te shfletuesi i vetëm <em>që mbi gjithçka vë juve.</em>
 
 
 ;Mozilla Firefox Web Browser
-Mozilla Firefox Web Browser
-
-
+Shfletuesi Web Mozilla Firefox
