--- a/sq/firefoxtesting.lang
+++ b/sq/firefoxtesting.lang
@@ -14,7 +14,7 @@ Shkarkoni dhe vini në provë versionet e ardhshme të Firefox-it. Provoni risit
 
 
 ;Firefox Beta
-Firefox Beta
+Firefox Beta {ok}
 
 
 ;Firefox Beta for:
