--- a/sq/newsletter.lang
+++ b/sq/newsletter.lang
@@ -62,7 +62,7 @@ Lexoni gjithçka për të te <span>buletini</span> ynë
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Pajtimi juaj te buletini u konfirmua.
 
 
 ;Format
@@ -70,23 +70,23 @@ Format
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Jeni Gati! <span>Por Daleni Pak, Ka Edhe Më</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Doni të keni të dhënat më me rëndësi? Na tregoni diçka rreth vetes. Dhe meqë jeni këtu, pajtohuni edhe te lajme të tjera nga Mozilla.
 
 
 ;Firefox & You
-Firefox & You
+Firefox-i & Ju
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+BUletinë të Tjerë:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Merrni ndihmëzat më të reja për të përfituar maksimumin nga shfletuesi juaj i parapëlqyer.
 
 
 ;Firefox Mobile
@@ -94,86 +94,86 @@ Firefox Mobile
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Njihuni me shtesat dhe veçoritë e reja më interesante për Firefox Mobile-in.
 
 
 ;Beta News
-Beta News
+Lajme për Beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Lexoni, para hedhjes përfundimtare në qarkullim, mbi veçoritë më të reja për Firefox-in për desktop dhe celular.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Le të Bëhemi Miq!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox-i gjendet edhe te site-et tuaj të parapëlqyer të rrjeteve shoqërore. Lidhuni me ne dhe merrni pjesë në shkëmbimin e ideve.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Administroni <span>Pajtimet tuaja në Buletine</span>
 
 
 ;Subscribe
-Subscribe
+Pajtohuni
 
 
 ;Unsubscribe
-Unsubscribe
+Çpajtohuni
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+I vini shenjë kësaj nëse do të doni të hiqeni nga krejt email-et e Mozilla-s
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Hiqmëni nga krejt email-et e Mozilla-s
 
 
 ;Save Preferences
-Save Preferences
+Ruajini Parapëlqimet
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Faleminderit që përditësuat parapëlqimet tuaja për email.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+U çpajtuat.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Na vjen keq t'ju shohim që largoheni. A ju vjen keq të na thoni pse po largoheni?
 
 
 ;You send too many emails.
-You send too many emails.
+Dërgoni shumë email-e.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Lënda juaj nuk më intereson.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Skema juaj për email-et është e vështirë për t'u lexuar.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Nuk u pajtova për këtë.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Lidhjet me Mozilla-n i mbaj më mirë Facebook dhe Twitter.
 
 
 ;Submit
-Submit
+Parashtroje
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Faleminderit që na treguat pse po largoheni.
 
 
