--- a/sq/mobile.lang
+++ b/sq/mobile.lang
@@ -2,130 +2,130 @@
 
 
 ;Get Firefox for Android
-Get Firefox for Android
+Merrni Firefox-in për Android
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+Shkarkojeni për <span>Android</span>
 
 
 ;Free from the Android Market
-Free from the Android Market
+Falas nga Android Market
 
 
 ;Or visit <a %s>Firefox.com/m</a> on your phone.
-Or visit <a %s>Firefox.com/m</a> on your phone.
+Ose vizitoni <a %s>Firefox.com/m</a> me telefonin tuaj.
 
 
 ;Supported Devices
-Supported Devices
+Pajisje të Mbuluara
 
 
 ;Get it from iTunes - FREE
-Get it from iTunes - FREE
+Merreni prej iTunes - FALAS
 
 
 ;Firefox Home for <span>iPhone</span>
-Firefox Home for <span>iPhone</span>
+Firefox Home për <span>iPhone</span>
 
 
 ;Access your Firefox history, bookmarks and open tabs on your iPhone.
-Access your Firefox history, bookmarks and open tabs on your iPhone.
+Hyni në historikun tuaj të Firefox-it, faqerojtësit dhe skedat e hapura, te iPhone-i juaj.
 
 
 ;Download Firefox to <span>Your Mobile</span>
-Download Firefox to <span>Your Mobile</span>
+Shkarkojeni Firefox-in te <span>Celulari Juaj</span>
 
 
 ;Want to test the latest features?
-Want to test the latest features?
+Doni të provoni veçoritë më të reja?
 
 
 ;Get Firefox Home for iPhone
-Get Firefox Home for iPhone
+Merrni Firefox Home për iPhone
 
 
 ;Download Beta for Android
-Download Beta for Android
+Shkarkoni Beta-n për Android
 
 
 ;Download
-Download
+Shkarkoje
 
 
 ;for
-for
+për
 
 
 ;Free from iTunes
-Free from iTunes
+Falas nga iTunes
 
 
 ;You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
-You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
+Do të keni rastin kështu të provoni veçoritë më të reja dhe të jepni përshtypjet tuaja, me qëllim përmirësimin dhe përimtësimin e atij që do të jetë produkti përfundimtar.
 
 
 ;Developer Tools
-Developer Tools
+Mjete Zhvilluesish
 
 
 ;You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
-You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
+Versionin për celular të Firefox-it mund ta instaloni te kompjuteri juaj desktop me qëllim që ta provoni, të jepni përshtypjet tuaja, dhe të krijoni shtesa.
 
 
 ;Connect With Firefox for Mobile:
-Connect With Firefox for Mobile:
+Lidhuni me Firefox-in për Celular:
 
 
 ;Monthly newsletter
-Monthly newsletter
+Buletini  mujor
 
 
 ;Follow us
-Follow us
+Na ndiqni
 
 
 ;Become a fan
-Become a fan
+Bëhuni fan
 
 
 ;Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
-Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
+Firefox-i përmban plot risi që ju lejojnë të shtypni më pak në tastierë, të shfletoni më tepër dhe të përdorni Web-in më shpejt dhe më lehtë.
 
 
 ;Freedom from typing
-Freedom from typing
+Çlirim nga të shkruajturit
 
 
 ;The Awesome Screen learns your favorite sites so you can browse with little or no typing.
-The Awesome Screen learns your favorite sites so you can browse with little or no typing.
+Ekrani Mahnitës i mban mend site-et tuaj të parapëlqyer që kështu të shfletoni vetëm me pak ose aspak shkrim në tastierë.
 
 
 ;Best of both worlds
-Best of both worlds
+Më të mirën e të dy botëve
 
 
 ;Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
-Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
+Firefox-i për Android tani është rihartuar dhe optimizuar që të mund të shfletoni nga telefonë dhe tablete.
 
 
 ;Browse quick and easy
-Browse quick and easy
+Shfletoni shpejt dhe lehtë
 
 
 ;Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
-Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
+Veçori të tilla si Sync, shfletimi me skeda dhe faqeruajtjet me një prekje do të thotë që gjithçka që ju duhet, e keni në pëllëmbë të dorës.
 
 
 ;<a %s>Need help?</a> Visit our Firefox for Android Support site.
-<a %s>Need help?</a> Visit our Firefox for Android Support site.
+<a %s>Ju duhet ndihmë?</a> Vizitoni site-in tonë të Asistencës për Firefox për Android.
 
 
 ;Download and test the build that’s right for you.
-Download and test the build that’s right for you.
+Shkarkoni dhe provoni montimin e përshtatshëm për ju.
 
 
 ;See all our channels for mobile »
-See all our channels for mobile »
+Shihni krejt kanalet tanë për celularë »
 
 
