--- a/sq/snippets.lang
+++ b/sq/snippets.lang
@@ -118,7 +118,7 @@ Ftoni miq tuajt të marrin një ide mbi veçoritë e ardhshme të Firefox-it. <a
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+E përdorni Firefox-in në disa kompjutera? Tani mundeni të njëkohësoni shtesat tuaj në krejt ata. <a href="%">Shihni se si të aktivizoni Sync-un.</a>
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
