--- a/sq/upgradedialog.lang
+++ b/sq/upgradedialog.lang
@@ -23,7 +23,7 @@ Më i mahnitshëm se kurrë
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Ka një version të ri të Firefox-it që mund t'ju mbrojë më mirë kundër sulmeve online.
 
 
 ;Get the upgrade — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+merrni fjalën e fundit në siguri
 
 
 ;experience faster performance
@@ -39,19 +39,19 @@ arrini punim më të shpejtë
 
 
 ;enjoy greater customization
-enjoy greater customization
+shijoni personalizim më të fuqishëm
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Versioni juaj i Firefox-it së shpejti do të jetë objekt sulmesh online.
 
 
 ;Stay safe online
-jini i sigurt kur jeni online
+Jini i sigurt kur jeni online
 
 
 ;Enjoy new features
-shijoni veçori të reja
+Shijoni veçori të reja
 
 
 ;URGENT!
@@ -63,26 +63,26 @@ Versioni juaj i Firefox-it nuk është më i mbrojtur nga sulmet online.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Ky është shënimi i fundit për t'jua kujtuar, përpara se të bëhet përditësimi i vetvetishëm me versionin më të ri
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox-i nuk e mbulon më versionin tuaj të sistemit operativ dhe do të jeni i zbuluar përballë sulmeve online.
 
 
 ;We recommend:
-We recommend:
+Këshillojmë:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Përmirësimin e <a %s>sistemit tuaj operativ</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Shkarkimin e një shfletuesi të përputhshëm me të
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Instalimin te <a %s>sistemi juaj operativ</a> të një përmirësimi të lirë
 
 
