adding curly quotes to unchaged strings
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104081 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sq/newsletter.lang
+++ b/sq/newsletter.lang
@@ -66,7 +66,7 @@ Pajtimi juaj te buletini u konfirmua.
 
 
 ;Format
-Format
+Format {ok}
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
@@ -90,7 +90,7 @@ Merrni ndihmëzat më të reja për të përfituar maksimumin nga shfletuesi jua
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox Mobile {ok}
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
