l10n: tr, update a string
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104082 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/tr/survey1.lang
+++ b/tr/survey1.lang
@@ -44,7 +44,7 @@ Erkek
 Kadın
 
 
-;Can I just check, which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
+;Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
 Şu anda masaüstü veya dizüstü bilgisayarınızda, evde veya iş yerinizde hangi tarayıcıları kullanıyorsunuz?
 
 ;Apple Safari
