new messages translated
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104094 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/pt-BR/upgradedialog.lang
+++ b/pt-BR/upgradedialog.lang
@@ -1,88 +1,66 @@
 ;Get the Newest Firefox
 Baixe o Firefox mais recente
 
-
 ;The Newest Firefox is Here!
 O FIrefox mais recente está aqui!
-
 
 ;<a %s>Quick, easy and free update</a>
 <a %s>Atualização rápida, fácil e gratuita</a>
 
-
 ;Fresh new look
 Visual revonado
-
 
 ;Much faster than Firefox 3.6
 Muito mais rápido que o Firefox 3.6
 
-
 ;More awesomeness than ever
 Mais incrível do que nunca
-
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
 Há uma versão mais recente do Firefox que pode melhor protegê-lo de ataques on-line.
 
-
 ;Get the upgrade — it’s fast & free!
 Obtenha a atualização — é rápido e grátis!
-
 
 ;get the latest in security
 tenha o mais recente em segurança
 
-
 ;experience faster performance
 experimente um desempenho mais rápido
-
 
 ;enjoy greater customization
 curta uma personalização mais rica
 
-
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
-
+Sua versão do Firefox logo estará vulnerável a ataques on-line.
 
 ;Stay safe online
-fique seguro online
-
+Fique seguro on-line
 
 ;Enjoy new features
-aproveite os novos recursos
-
+Aproveite os novos recursos
 
 ;URGENT!
 URGENTE!
 
-
 ;Your version of Firefox is no longer protected against online attacks.
-A sua versão do Firefox não está mais protegida contra ataques online.
-
+Sua versão do Firefox não está mais protegida contra ataques on-line.
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
-
+Este é o seu último lembrete antes de ser automaticamente atualizado para a versão mais recente
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-
+O Firefox deixou de suportar a versão do seu sistema e estará vulnerável a ataques on-line.
 
 ;We recommend:
-We recommend:
-
+Nós recomendamos:
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
-
+Atualizar o seu <a %s>sistema operacional</a>
 
 ;Downloading a compatible browser
-Downloading a compatible browser
-
+Baixar um navegador compatível
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
-
+Instalar uma atualização gratuita no seu <a %s>sistma operacional</a>
 
