[pt-BR] missing {ok} added
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104097 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/pt-BR/survey1.lang
+++ b/pt-BR/survey1.lang
@@ -163,7 +163,7 @@ Firefox para Android
 O navegador Firefox em um telefone ou tablet Android
 
 ;Mozilla Persona
-Mozilla Persona
+Mozilla Persona {ok}
 
 ;An identity system that allows you to sign in to sites using an email address you choose.
 Um sistema de identificação que permite entrar nos sites usando um endereço de e-mail que você escolher.
