--- a/sl/download.lang
+++ b/sl/download.lang
@@ -23,7 +23,7 @@ Hvala, da ste izbrali Firefox!
 
 
 ;Your download should automatically begin in a few seconds, but if not, <a href="%s">click here</a>.
-Vaš prenos se bo samodejno začel čez nekaj sekund, če ne, <a href="%s">kliknite tukaj</a>.
+Vaš prenos se bo samodejno začel čez nekaj sekund, sicer <a href="%s">kliknite tukaj</a>.
 
 
 ;As a non-profit, we’re free to innovate on your behalf without any pressure to compromise. You’re going to love the difference.
