--- a/sl/main.lang
+++ b/sl/main.lang
@@ -67,7 +67,7 @@ Licence
 
 
 ;Careers
-Zaposlitve
+Zaposlitev
 
 
 ;Press Center
@@ -111,7 +111,7 @@ Obiščite Mozilla.com (v angleščini)
 
 
 ;Download Firefox - Free
-Prenesite Firefox - zastonj
+Prenesite Firefox - brezplačno
 
 
 ;Release Notes
@@ -147,7 +147,7 @@ Zapri
 
 
 ;Download Now - Free
-Prenesite zdaj - zastonj
+Prenesite zdaj - brezplačno
 
 
 ;Return to top
@@ -203,7 +203,7 @@ Naprej
 
 
 ;MB
-Mb
+MB
 
 
 ;MegaBytes
@@ -239,7 +239,7 @@ Prilagoditev z dodatki
 
 
 ;Sync Your Desktop & Mobile
-Sinhronizirajte računalnik in mobilnik
+Uskladite računalnik in mobilnik
 
 
 ;Learn More
@@ -251,31 +251,31 @@ Oglejte si video
 
 
 ;WebM format
-format WebM
+Zapis WebM
 
 
 ;Ogg Theora format
-format Ogg Theora
+Zapis Ogg Theora
 
 
 ;MPEG-4 format
-format MPEG-4
+Zapis MPEG-4
 
 
 ;Whoops! Be sure to enter a valid email address.
-Ups! Prepričajte se, ali je poštni naslov pravilen.
+Ups! Prepričajte se, da je e-poštni naslov pravilen.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Prosimo, da si preberete smernice Mozille glede zasebnosti in potrdite, da se strinjate z njimi.
+Preberite politiko zasebnosti Mozille in potrdite, da se strinjate z njo.
 
 
 ;Please enter your email address and review the Mozilla Privacy Policy.
-Vnesite prosim svoj poštni naslov in preglejte smernice Mozille glede zasebnosti.
+Vnesite svoj e-poštni naslov in preglejte politiko zasebnosti Mozille.
 
 
 ;Mobile
-Mobilne naprave
+Mobilniki
 
 
 ;Firefox Updated
@@ -283,15 +283,15 @@ Firefox posodobljen
 
 
 ;Take a Look at Tomorrow's Web
-Poglejte si, kakšna bo mreža jutri
+Poglejte si, kakšen bo splet jutri
 
 
 ;Journey to the Future with Firefox
-Izlet v bodočnost s Firefox
+Izlet v prihodnost Firefoxa
 
 
 ;Join the Beta Program
-Pridružite se beta programu
+Pridružite se programu beta
 
 
 ;Experience Firefox
@@ -299,19 +299,19 @@ Občutite Firefox
 
 
 ;The future of the Web is waiting for you!
-Bodočnost mreže vas pričakuje!
+Prihodnost spleta vas pričakuje!
 
 
 ;The future of the Web starts now.
-Za mrežo se začne bodočnost danes.
+Prihodnost spleta se začenja danes.
 
 
 ;Try Firefox with a fresh look and feel.
-Poizkusite Firefox z novim pogledom in občutkom.
+Poskusite Firefox z novim videzom.
 
 
 ;Experience tomorrow's Web today.
-Okusite danes, kakšna bo mreža jutri.
+Že danes okusite, kakšen bo splet jutri.
 
 
 ;Check out the new look and feel of Firefox.
@@ -319,15 +319,15 @@ Spoznajte zadnje novosti Firefoxa.
 
 
 ;Browse the future of the Web.
-Brskajte po bodočnosti mreže.
+Brskajte po prihodnosti spleta.
 
 
 ;See Firefox with a new look and feel.
-Poglejte si Firefox z novim videzom in občutkom.
+Poglejte si Firefox z novim videzom.
 
 
 ;Download Beta Now.
-Prenesite si inačico Beto.
+Prenesite različico beta.
 
 
 ;All Systems & Languages
@@ -335,15 +335,15 @@ Vsi sistemi in jeziki
 
 
 ;View Full Site
-Prikaz celotnega spletišča
+Prikaz celotne strani
 
 
 ;Get Firefox for Android
-Prenesite si Firefox za Android
+Prenesite Firefox za Android
 
 
 ;Download for <span>Android</span>
-Prenesite za <span>Android</span>
+Prenos za <span>Android</span>
 
 
 ;Free from the Android Market
@@ -355,11 +355,11 @@ Namizje
 
 
 ;Firefox Beta for mobile
-Firefox Beta za mobile
+Firefox beta za mobilnike
 
 
 ;Firefox for mobile
-Firefox za mobile
+Firefox za mobilnike
 
 
 ;Email
@@ -375,7 +375,7 @@ Super hitrost
 
 
 ;Stunning graphics
-Grafika, ki osuplja
+Grafika, ki osupne
 
 
 ;The latest technologies
