--- a/sl/mobile.lang
+++ b/sl/mobile.lang
@@ -2,19 +2,19 @@
 
 
 ;Get Firefox for Android
-Priskrbite si Firefox za Android
+Prenesite Firefox za Android
 
 
 ;Download for <span>Android</span>
-Prenesite si <span>Android</span>
+Prenos za <span>Android</span>
 
 
 ;Free from the Android Market
-Brezplaöno z Android Market
+Brezplčno z Android Marketa
 
 
 ;Or visit <a %s>Firefox.com/m</a> on your phone.
-Ali pa obiščite <a %s>Firefox.com/m</a> s svojim telefonom.
+Ali obiščite <a %s>Firefox.com/m</a> s svojim telefonom.
 
 
 ;Supported Devices
@@ -38,15 +38,15 @@ Prenesite Firefox za <span>svoj mobilnik</span>
 
 
 ;Want to test the latest features?
-Hočete testirati najnovejše funkcije?
+Želite preskusiti najnovejše zmogljivosti?
 
 
 ;Get Firefox Home for iPhone
-Prenesite si Firefox Home za iPhone
+Prenesite Firefox Home za iPhone
 
 
 ;Download Beta for Android
-Prenesite si Beta za Android
+Prenesite beto za Android
 
 
 ;Download
@@ -62,14 +62,14 @@ Brezplačno z iTunes
 
 
 ;You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
-Okusili boste vrhunske funkcije, nam pa s svojo izkušnjo pomagali izboljšati in zbrusiti vsebino končne izdaje.
+Okusili boste vrhunske zmogljivosti, nam pa s svojo izkušnjo pomagali izboljšati in zbrusiti vsebino končne izdaje.
 
 ;Developer Tools
 Razvojna orodja
 
 
 ;You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
-Mobilno različico Firefoxa lahko namestite na svoj naš namizni računalnik, da si jo ogledate, da poveste svoje mnenje in da si gradite dodatke.
+Mobilno različico Firefoxa lahko namestite na svoj namizni računalnik, da jo preskusite, nam sporočite svoje mnenje in da si razvijate dodatke.
 
 
 ;Connect With Firefox for Mobile:
@@ -81,7 +81,7 @@ Mesečne novice
 
 
 ;Follow us
-Ostanite z nami v stiku
+Ostanite v stiku z nami
 
 
 ;Become a fan
@@ -89,7 +89,7 @@ Postanite ljubitelj
 
 
 ;Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
-Firefox vsebuje cel kup novosti, sedaj lahko manj tipkate in več brskate in hitreje in enostavneje letate po spletu.
+Firefox vsebuje cel kup novosti, sedaj lahko manj tipkate in več brskate ter hitreje in enostavneje pridete na spletu.
 
 
 ;Freedom from typing
@@ -97,34 +97,34 @@ Rešite se tipkanja
 
 
 ;The Awesome Screen learns your favorite sites so you can browse with little or no typing.
-Pametna vrstica za naslove si zapomni vaša priljubljena spletna mesta, tako da vam je komaj kaj še treba tipkati.
+Pametna vrstica si zapomni priljubljene strani, tako da je tipkanje komaj še potrebno.
 
 
 ;Best of both worlds
-Optimalno za vse
+Najboljše iz obeh svetov
 
 
 ;Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
-Firefox  za Android smo sedaj preoblikovali in optimizirali za brskanje na telefonih in tablicah.
+Firefox za Android smo preoblikovali in optimizirali za brskanje na telefonih in tablicah.
 
 
 ;Browse quick and easy
-Brskajte hitro in brez težav
+Brskajte hitro in enostavno
 
 
 ;Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
-S funkcijami, kot so Sync, brskanje po zavihkih in oznake na en klick imate vse, kar potrebujete na dosegu roke.
+Usklajevanje, brskanje z zavihki in zaznamovanje z enim klikom zagotvljajo vse, kar potrebujete, na dosegu roke.
 
 
 ;<a %s>Need help?</a> Visit our Firefox for Android Support site.
-<a %s>Rabite pomoč?</a> Obiščite pomoč za Firefox za Android.
+<a %s>Potrebujete pomoč?</a> Obiščite pomoč za Firefox za Android.
 
 
 ;Download and test the build that’s right for you.
-Prenesite in testirajte gradnjo, ki vam najbolj odgovarja.
+Prenesite in preskusite izdajo, ki vam najbolj odgovarja.
 
 
 ;See all our channels for mobile »
-Tukaj so vsi kanali za mobilnike »
+Oglejte si vse kanale za mobilnike »
 
 
