--- a/sl/newsletter.lang
+++ b/sl/newsletter.lang
@@ -22,7 +22,7 @@ Izberite državo
 
 
 ;Whoops! Be sure to enter a valid email address.
-Opsala! Prepričajte se, da je poštni naslov pravilen.
+Opsala! Prepričajte se, da je e-poštni naslov pravilen.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
@@ -58,11 +58,11 @@ Pravkar smo vam po elektronski pošti poslali potrditveno sporočilo. Kliknite n
 
 
 ;Read all about it in our <span>newsletter</span>
-Vse to in še več v našem <span>biltenu</span>
+Vse to in še več v naši <span>okrožnici</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Vaša prijava na bilten je potrjena.
+Vaša prijava na okrožnico je potrjena.
 
 
 ;Format
@@ -74,7 +74,7 @@ Urejeno! <span>Ampak trenutek, to še ni vse</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Želite dobivati najbolj pomembne informacije? Povej nam malo več o sebi. In ko ste tukaj, se prijavite še na druge novice Mozille.
+Želite prejemati najbolj ustrezne novice? Povej nam več o sebi. In ko ste že tukaj, se prijavite še na druge novice Mozille.
 
 
 ;Firefox & You
@@ -82,11 +82,11 @@ Firefox in vi
 
 
 ;Our Other Newsletters:
-Naši drugi bilteni:
+Naše druge okrožnice:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Preberite si najnovejše nasvete in trike, da dobite kar največ iz vašega najljubšega brskalnika.
+Preberite nasvete in zvijače, da boste kar najbolje izkoristili vaš najljubši brskalnik.
 
 
 ;Firefox Mobile
@@ -94,15 +94,15 @@ Firefox za mobilnike
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Spoznajte se z najbolj vročimi novimi dodatki in funkcijami v Firefoxu za mobilnike.
+Spoznajte se z najbolj vročimi dodatki in zmogljivostmi Firefoxa za mobilnike.
 
 
 ;Beta News
-Beta bilten
+Beta novice
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Preberite si že pred končno objavo vse o najnovejših funkcijah v Firefox za namizne računalnike in za mobilnike.
+Preberite vse o zmogljivostih Firefoxa za namizne računalnike in mobilnike še pred izdajo.
 
 
 ;Let’s Be Friends!
@@ -114,23 +114,23 @@ Firefox je tudi eno od vaših priljubljenih družabnih spletnih mest. Pridružit
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Urejanje <span>naročnin za novice</span>
+Urejanje <span>naročnin na okrožnice</span>
 
 
 ;Subscribe
-Prijava za naročnino
+Prijava
 
 
 ;Unsubscribe
-Odjava naročnine
+Odjava
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Odkljukajte tukaj, če želite odjaviti vsae naročnine pri Mozilli
+Odkljukajte, če želite odjaviti vse naročnine na Mozilline okrožnice
 
 
 ;Remove me from all Mozilla emails
-Odjavi me od vseh naročnin pri Mozilli
+Odjavi me od vseh Mozillinih okrožnic
 
 
 ;Save Preferences
@@ -138,11 +138,11 @@ Shrani nastavitve
 
 
 ;Thanks for updating your email preferences.
-Hvala vam, ker ste posobili svoje poštne nastavitve.
+Hvala, ker ste posobili svoje e-poštne nastavitve.
 
 
 ;You've been unsubscribed.
-Sedaj ste odjavljeni.
+Zdaj ste odjavljeni.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
@@ -154,7 +154,7 @@ Dobivam preveč pošte.
 
 
 ;Your content wasn't relevant to me.
-Vađa vsebina me ni zanimala.
+Vaša vsebina me ni zanimala.
 
 
 ;Your email design was too hard to read.
@@ -162,7 +162,7 @@ Vašo pošto je bilo težko brati.
 
 
 ;I didn't sign up for this.
-Za to se nisem prijavil.
+Nisem se prijavil na okrožnico.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
