--- a/sl/snippets.lang
+++ b/sl/snippets.lang
@@ -30,19 +30,19 @@ Firefox nastane iz različice beta, beta pa iz Aurore. <a href="%s">Preskusite F
 
 
 ;Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
-S ponosom smo neprofitni, tako da lahko brez pritiskov in popuščanj svobodno delamo v vašo korist. <a href="%s">Preberite si več</a> o našem poslanstvu.
+S ponosom smo neprofitni, tako da lahko brez pritiskov in popuščanj svobodno delamo v vašo korist. <a href="%s">Preberite več</a> o našem poslanstvu.
 
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-Firefox je hiter, gibčen in varen in edini, ki postavlja vas na prvo mesto. Načrtno smo drugačni - <a href="%s">več o tem tule</a>.
+Firefox je hiter, gibčen in varen ter edini, ki postavlja vas na prvo mesto. <a href="%s">Spoznajte zakaj</a> smo drugačni z razlogom.
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-<a href="%s">Prenesite si Firefox za vašo Android tablico</a> in prevzemite krmilo po spletu v svoje roke. Storite to zdaj.
+<a href="%s">Prenesite Firefox za vašo Android tablico</a> in prevzemite krmilo spleta v svoje roke. Storite to zdaj.
 
 
 ;Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
-Preverite s <a href="%s">Kontrolo vstavkov</a>, da so vaši vstavki na tekočem in bo vaše brskanje tako bolj varno..
+Preverite s <a href="%s">Kontrolo vstavkov</a>, da so vaši vstavki na tekočem in bo vaše brskanje tako bolj varno.
 
 
 ;Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
