--- a/sl/upgradedialog.lang
+++ b/sl/upgradedialog.lang
@@ -1,9 +1,9 @@
 ;Get the Newest Firefox
-Prenesite si novi Firefox
+Prenesite najnovejši Firefox
 
 
 ;The Newest Firefox is Here!
-Pred vami je novi Firefox!
+Pred vami je najnovejši Firefox!
 
 
 ;<a %s>Quick, easy and free update</a>
@@ -23,15 +23,15 @@ Veliko hitrejši kot Firefox 3.6
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-Na razpolago je nova različica Firefox, ki vaš še bolje brani pred napadi na spletu.
+Na razpolago je nova različica Firefoxa, ki vas še bolje brani pred napadi na spletu.
 
 
 ;Get the upgrade — it’s fast & free!
-Prenesite si posodobitev - hitra je in nič nič ne stane!
+Prenesite posodobitev - hitro in brezplačno!
 
 
 ;get the latest in security
-dobite si najnovejše s področja varnosti
+prenesite najnovejše varnostne posodobitve
 
 
 ;experience faster performance
@@ -39,7 +39,7 @@ Poskrbite za hitrejše brskanje
 
 
 ;enjoy greater customization
-prilagojevanje je sedaj še lažje
+prilagojevanje je še lažje
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
@@ -47,11 +47,11 @@ Vaša različica Firefoxa bo kmalu predmet napadov na spletu.
 
 
 ;Stay safe online
-Privoščite si varnost na spletu
+Ostanite varni na spletu
 
 
 ;Enjoy new features
-Uživajte v novih funkcijah
+Uživajte v novih zmogljivostih
 
 
 ;URGENT!
@@ -63,11 +63,11 @@ Vaša različica Firefoxa ni več zaščitena pred napadi na spletu.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-Še en, zadnji, opomin, odslej vam bomo brskalnik posodabljali samodejno
+Še zadnji opomin, potem pa vam bomo brskalnik samodejno posodabljali na najnovejšo različico
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox vaše različice operacijskega sistema več ne podpira in bo zaradi tega ranljiv za napade na spletu.
+Firefox vaše različice operacijskega sistema ne podpira in bo zato ranljiv za napade na spletu.
 
 
 ;We recommend:
@@ -79,7 +79,7 @@ Posodobite svoj <a %s>operacijski sistem</a>
 
 
 ;Downloading a compatible browser
-Prenesite si združljiv brskalnik
+Prenesite združljiv brskalnik
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
