Afrikaans: bring to 100% complete
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104102 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/af/main.lang
+++ b/af/main.lang
@@ -39,7 +39,7 @@ Ontwikkelaars
 
 
 ;Labs
-Labs
+Labs {ok}
 
 
 ;skip to Navigation
@@ -87,7 +87,7 @@ Ander tale:
 
 
 ;%Y-%m-%d
-%Y-%m-%d
+%Y-%m-%d {ok}
 
 
 ;All rights reserved.
@@ -400,5 +400,3 @@ Gradeer nou op
 
 ;Update now
 Werk nou by
-
-
