Welsh: update to 100% translated.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104103 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/cy/main.lang
+++ b/cy/main.lang
@@ -31,7 +31,7 @@ Ychwanegion
 
 
 ;About Us
-Amdanom Ni
+Amdanom ni
 
 
 ;Developers
@@ -39,7 +39,7 @@ Datblygwyr
 
 
 ;Labs
-Labs{ok}
+Labordai
 
 
 ;skip to Navigation
@@ -59,7 +59,7 @@ Ynghylch Mozilla
 
 
 ;Get Involved
-Ymuno â Ni
+Ymuno â ni
 
 
 ;Licensing
@@ -75,7 +75,7 @@ Canolfan y Wasg
 
 
 ;Contact Us
-Cysylltu â Ni
+Cysylltu â ni
 
 
 ;Site contact
@@ -111,7 +111,7 @@ Ymweld â Mozilla.com (yn Saesneg)
 
 
 ;Download Firefox - Free
-Llwytho Firefox i lawr - Am Ddim
+Llwytho Firefox i lawr - Am ddim
 
 
 ;Release Notes
@@ -119,7 +119,7 @@ Nodiadau rhyddhau
 
 
 ;Other Systems and Languages
-Systemau ac Ieithoedd Eraill
+Systemau ac ieithoedd eraill
 
 
 ;Get Firefox
@@ -127,7 +127,7 @@ Estyn Firefox
 
 
 ;Free Download
-Llwytho i Lawr Am Ddim
+Llwytho i Lawr am ddim
 
 
 ;Help us make Firefox even better!
@@ -147,7 +147,7 @@ Cau
 
 
 ;Download Now - Free
-Llwytho i Lawr Nawr - Am Ddim
+Llwytho i lawr yn awr - Am ddim
 
 
 ;Return to top
@@ -167,7 +167,7 @@ Nodweddion
 
 
 ;Customize
-Cyfaddasu
+Addasu
 
 
 ;Synchronize
@@ -175,15 +175,15 @@ Cydweddu
 
 
 ;Develop for Mobile
-Datblygu ar gyfer Ffôn Symudol
+Datblygu ar gyfer ffôn symudol
 
 
 ;Other Supported Platforms
-Systemau Eraill sy'n Cael eu Cynnal
+Systemau eraill sy'n cael eu cynnal
 
 
 ;Other Platforms &amp; Languages
-Systemau ac Ieithoedd Eraill
+Systemau ac ieithoedd eraill
 
 
 ;Choose your location
@@ -203,7 +203,7 @@ Nesaf
 
 
 ;MB
-MB{ok}
+MB {ok}
 
 
 ;MegaBytes
@@ -223,11 +223,11 @@ Ar wahân i lle <a href="%s">nodir</a> yn wahanol, mae cynnwys y wefan wedi ei d
 
 
 ;Report Trademark Abuse
-Adrodd am Gamddefnyddio Nod Masnach
+Adrodd am gamddefnyddio nod masnach
 
 
 ;Free Upgrade
-Diweddaru am Ddim
+Diweddaru am ddim
 
 
 ;Follow us on:
@@ -235,11 +235,11 @@ Dilyn ni ar:
 
 
 ;Customize with Add-ons
-Addasu gydag Ychwanegion
+Addasu gydag ychwanegion
 
 
 ;Sync Your Desktop & Mobile
-Cydweddu eich Bwrdd Gwaith a'ch Ffôn Symudol
+Cydweddu eich bwrdd gwaith gyda'ch ffôn symudol
 
 
 ;Learn More
@@ -271,7 +271,7 @@ Darllenwch Bolisi Preifatrwydd Mozilla a chytuno iddo gan dicio'r blwch.
 
 
 ;Please enter your email address and review the Mozilla Privacy Policy.
-Rhowch eich cyfeiriad e-bost a darllenwch Bolisi Preifatrwydd Mozilla.
+Rhowch eich cyfeiriad e-bost a darllen Polisi Preifatrwydd Mozilla.
 
 
 ;Mobile
@@ -287,7 +287,7 @@ Cymrwch gip ar We Yfory
 
 
 ;Journey to the Future with Firefox
-Taith i'r Dyfodol gyda Firefox
+Taith i'r dyfodol gyda Firefox
 
 
 ;Join the Beta Program
@@ -303,7 +303,7 @@ Mae dyfodol y We yn aros amdanoch!
 
 
 ;The future of the Web starts now.
-Mae dyfodol y We yn cychwyn nawr.
+Mae dyfodol y We yn cychwyn yn awr.
 
 
 ;Try Firefox with a fresh look and feel.
@@ -327,15 +327,15 @@ Edrychwch ar Firefox ar ei newydd wedd.
 
 
 ;Download Beta Now.
-Llwythwch y Beta i Lawr Nawr.
+Llwythwch y Beta i lawr yn awr.
 
 
 ;All Systems & Languages
-Pob System ac Iaith
+Pob system ac iaith
 
 
 ;View Full Site
-Gweld y Wefan Gyfan
+Gweld y wefan gyfan
 
 
 ;Get Firefox for Android
@@ -351,7 +351,7 @@ Am ddim o'r Android Market
 
 
 ;Desktop
-Bwrdd Gwaith
+Bwrdd gwaith
 
 
 ;Firefox Beta for mobile
@@ -367,7 +367,7 @@ E-bost
 
 
 ;Mozilla Firefox. Bringing the modern Web to XP.
-Mozilla Firefox. Dod a'r We fodern i XP.
+Mozilla Firefox. Dod a'r we fodern i XP.
 
 
 ;Super speed
@@ -376,6 +376,7 @@ Cyflym iawn
 
 ;Stunning graphics
 Graffigau trawiadol
+
 
 ;The latest technologies
 Y technolegau diweddaraf
@@ -394,10 +395,8 @@ Rydych yn defnyddio hen fersiwn o Firefox. Estynnwch <a href="%s">eich diweddari
 
 
 ;Upgrade now
-Diweddarwch nawr
+Diweddarwch yn awr
 
 
 ;Update now
-Diweddarwch nawr
-
-
+Diweddarwch yn awr
