--- a/cy/download.lang
+++ b/cy/download.lang
@@ -3,7 +3,7 @@ Crewyd Mozilla Firefox, porwr gwe rhydd, gan gorff byd eang dim er elw sydd a'i 
 
 
 ;Different by Design
-Yn Fwriadol Wahanol
+Yn fwriadol wahanol
 
 
 ;Proudly <span>non-profit</span>
@@ -23,7 +23,7 @@ Diolch am ddewis Firefox!
 
 
 ;Your download should automatically begin in a few seconds, but if not, <a href="%s">click here</a>.
-Bydd yn cychwyn llwytho i lawr ymhen ychydig eiliadau, os na fydd, <a href="%s">cliciwch yma</a>.
+Bydd eich copi yn cychwyn llwytho i lawr ymhen ychydig eiliadau, os na fydd, <a href="%s">cliciwch yma</a>.
 
 
 ;As a non-profit, we’re free to innovate on your behalf without any pressure to compromise. You’re going to love the difference.
@@ -36,5 +36,3 @@ Croeso i'r unig borwr sy'n eich <em>rhoi chi'n gyntaf.</em>
 
 ;Mozilla Firefox Web Browser
 Porwr Gwe Mozilla Firefox
-
-
