Fulah: update all 100% translate .lang files.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104104 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ff/newsletter.lang
+++ b/ff/newsletter.lang
@@ -1,6 +1,3 @@
-# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
-
-
 ;Get Monthly News
 Heɓ kabaruuji lewriije
 
@@ -114,66 +111,64 @@ Firefox ena woni kadi e lowe maa laylayte renndo ɓurɗe labeede. Seŋo e amen n
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Toppito <span>Binnditagol maa e Ɓataakeeji</span> ɗii
 
 
 ;Subscribe
-Subscribe
+Lulno
 
 
 ;Unsubscribe
-Unsubscribe
+Lultino
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Labo ɗoo so aɗa yiɗi momteede e iimeeluuji Mozilla fof
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Momtu am e iimeeluuji Mozilla fof
 
 
 ;Save Preferences
-Save Preferences
+Danndu Cuɓoraaɗe
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+A jaaraama e kesɗitinal cuɓoraaɗe iimeeluuji maa.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+A lultinaama.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Maa waɗ-min yeeweende deh. Hol ko waɗ-maa yiɗde yaltude e amen?
 
 
 ;You send too many emails.
-You send too many emails.
+Oɗon nelda meeluuji haa wooroo.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Loowdi mon ndii toɗɗaaki-mi.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Lelngo iiimeeluuji mon ena metti tarde.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Mi winnditaaki e ɗum.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Ɓur-mi yiɗde ko jokkondirde e Mozilla e Facebook e Twitter.
 
 
 ;Submit
-Submit
+Naatnu
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
-
-
+A jaaraama e habrude-min ko waɗ maa yahde.
